PostKonsult API call

--- a/src/app/konsult-dashboard/konsult-dashboard.component.html
+++ b/src/app/konsult-dashboard/konsult-dashboard.component.html
@@ -39,25 +39,28 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form>
-          <div class="mb-3">
+        <form [formGroup]="formValue">
+          <!-- <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">ID</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          </div>
+            <input type="text" formControlName="id" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          </div> -->
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Förnamn</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
+            <input type="text" formControlName="firstName" class="form-control" id="exampleInputPassword1">
           </div>
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Efternamn</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
+            <input type="text" formControlName="lastName" class="form-control" id="exampleInputPassword1">
           </div>
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Anställningsdatum</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
+            <input type="date" formControlName="Date" class="form-control" id="exampleInputPassword1">
           </div>
-          <button type="submit" class="btn myBtn myBtnSubmit">Spara konsult</button>
         </form>
+        <div class="modal-footer">
+          <button type="button" class="btn myBtn myBtnSubmit" (click)="postKonsultDetails()">Spara konsult</button>
+          <button type="button" id="cancel" class="btn myBtn myBtnCancel" data-bs-dismiss="modal">Ångra</button>
+        </div>
       </div>
     </div>
   </div>
