--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -17,7 +17,7 @@
       </div>-->
       <div class="navbar-nav navbar-header navbar-right">
         <a class="nav-link" [routerLink]="['/konsult-dashboard']">Konsulter</a>
-        <a class="nav-link" (click)="goToPage('bonus')">Bonusberäkning</a>
+        <a class="nav-link" [routerLink]="['/bonus']">Bonusberäkning</a>
       </div>
     </div>
   </nav>
