--- a/src/app/konsult-dashboard/konsult-dashboard.component.html
+++ b/src/app/konsult-dashboard/konsult-dashboard.component.html
@@ -6,7 +6,7 @@
 <table class="table myTable mt-3">
   <thead>
     <tr>
-      <th class="col konsultContent  centerText">Konsult Id</th>
+      <th class="col konsultContent  centerText">Id</th>
       <th class="col konsultContent  centerText">Förnamn</th>
       <th class="col konsultContent  centerText">Efternamn</th>
       <th class="col konsultContent  centerText">Startdatum</th>
